cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir1 SHARED ${SRC_FILES} )
set_source_files_properties(file2.cpp PROPERTIES COMPILE_FLAGS -Dfile2)

set_source_files_properties(file3.cpp PROPERTIES COMPILE_FLAGS -Dfile3)

set_source_files_properties(file4.cpp PROPERTIES COMPILE_FLAGS -Dfile4)

set_source_files_properties(file5.cpp PROPERTIES COMPILE_FLAGS -Dfile5)

set_source_files_properties(file6.cpp PROPERTIES COMPILE_FLAGS -Dfile6)

set_source_files_properties(file7.cpp PROPERTIES COMPILE_FLAGS -Dfile7)

set_source_files_properties(file8.cpp PROPERTIES COMPILE_FLAGS -Dfile8)

set_source_files_properties(file9.cpp PROPERTIES COMPILE_FLAGS -Dfile9)

set_source_files_properties(file10.cpp PROPERTIES COMPILE_FLAGS -Dfile10)

set_source_files_properties(file11.cpp PROPERTIES COMPILE_FLAGS -Dfile11)

set_source_files_properties(file12.cpp PROPERTIES COMPILE_FLAGS -Dfile12)

set_source_files_properties(file13.cpp PROPERTIES COMPILE_FLAGS -Dfile13)

set_source_files_properties(file14.cpp PROPERTIES COMPILE_FLAGS -Dfile14)

set_source_files_properties(file15.cpp PROPERTIES COMPILE_FLAGS -Dfile15)

set_source_files_properties(file16.cpp PROPERTIES COMPILE_FLAGS -Dfile16)

set_source_files_properties(file17.cpp PROPERTIES COMPILE_FLAGS -Dfile17)

set_source_files_properties(file18.cpp PROPERTIES COMPILE_FLAGS -Dfile18)

set_source_files_properties(file19.cpp PROPERTIES COMPILE_FLAGS -Dfile19)

set_source_files_properties(file20.cpp PROPERTIES COMPILE_FLAGS -Dfile20)

set_source_files_properties(file21.cpp PROPERTIES COMPILE_FLAGS -Dfile21)

set_source_files_properties(file22.cpp PROPERTIES COMPILE_FLAGS -Dfile22)

set_source_files_properties(file23.cpp PROPERTIES COMPILE_FLAGS -Dfile23)

set_source_files_properties(file24.cpp PROPERTIES COMPILE_FLAGS -Dfile24)

set_source_files_properties(file25.cpp PROPERTIES COMPILE_FLAGS -Dfile25)

set_source_files_properties(file26.cpp PROPERTIES COMPILE_FLAGS -Dfile26)

set_source_files_properties(file27.cpp PROPERTIES COMPILE_FLAGS -Dfile27)

set_source_files_properties(file28.cpp PROPERTIES COMPILE_FLAGS -Dfile28)

set_source_files_properties(file29.cpp PROPERTIES COMPILE_FLAGS -Dfile29)

set_source_files_properties(file30.cpp PROPERTIES COMPILE_FLAGS -Dfile30)

set_source_files_properties(file31.cpp PROPERTIES COMPILE_FLAGS -Dfile31)

set_source_files_properties(file32.cpp PROPERTIES COMPILE_FLAGS -Dfile32)

set_source_files_properties(file33.cpp PROPERTIES COMPILE_FLAGS -Dfile33)

set_source_files_properties(file34.cpp PROPERTIES COMPILE_FLAGS -Dfile34)

set_source_files_properties(file35.cpp PROPERTIES COMPILE_FLAGS -Dfile35)

set_source_files_properties(file36.cpp PROPERTIES COMPILE_FLAGS -Dfile36)

set_source_files_properties(file37.cpp PROPERTIES COMPILE_FLAGS -Dfile37)

set_source_files_properties(file38.cpp PROPERTIES COMPILE_FLAGS -Dfile38)

set_source_files_properties(file39.cpp PROPERTIES COMPILE_FLAGS -Dfile39)

set_source_files_properties(file40.cpp PROPERTIES COMPILE_FLAGS -Dfile40)

set_source_files_properties(file41.cpp PROPERTIES COMPILE_FLAGS -Dfile41)

set_source_files_properties(file42.cpp PROPERTIES COMPILE_FLAGS -Dfile42)

set_source_files_properties(file43.cpp PROPERTIES COMPILE_FLAGS -Dfile43)

set_source_files_properties(file44.cpp PROPERTIES COMPILE_FLAGS -Dfile44)

set_source_files_properties(file45.cpp PROPERTIES COMPILE_FLAGS -Dfile45)

set_source_files_properties(file46.cpp PROPERTIES COMPILE_FLAGS -Dfile46)

set_source_files_properties(file47.cpp PROPERTIES COMPILE_FLAGS -Dfile47)

set_source_files_properties(file48.cpp PROPERTIES COMPILE_FLAGS -Dfile48)

set_source_files_properties(file49.cpp PROPERTIES COMPILE_FLAGS -Dfile49)

set_source_files_properties(file50.cpp PROPERTIES COMPILE_FLAGS -Dfile50)

set_source_files_properties(file51.cpp PROPERTIES COMPILE_FLAGS -Dfile51)

set_source_files_properties(file52.cpp PROPERTIES COMPILE_FLAGS -Dfile52)

set_source_files_properties(file53.cpp PROPERTIES COMPILE_FLAGS -Dfile53)

set_source_files_properties(file54.cpp PROPERTIES COMPILE_FLAGS -Dfile54)

set_source_files_properties(file55.cpp PROPERTIES COMPILE_FLAGS -Dfile55)

set_source_files_properties(file56.cpp PROPERTIES COMPILE_FLAGS -Dfile56)

set_source_files_properties(file57.cpp PROPERTIES COMPILE_FLAGS -Dfile57)

set_source_files_properties(file58.cpp PROPERTIES COMPILE_FLAGS -Dfile58)

set_source_files_properties(file59.cpp PROPERTIES COMPILE_FLAGS -Dfile59)

set_source_files_properties(file60.cpp PROPERTIES COMPILE_FLAGS -Dfile60)

set_source_files_properties(file61.cpp PROPERTIES COMPILE_FLAGS -Dfile61)

set_source_files_properties(file62.cpp PROPERTIES COMPILE_FLAGS -Dfile62)

set_source_files_properties(file63.cpp PROPERTIES COMPILE_FLAGS -Dfile63)

set_source_files_properties(file64.cpp PROPERTIES COMPILE_FLAGS -Dfile64)

set_source_files_properties(file65.cpp PROPERTIES COMPILE_FLAGS -Dfile65)

set_source_files_properties(file66.cpp PROPERTIES COMPILE_FLAGS -Dfile66)

set_source_files_properties(file67.cpp PROPERTIES COMPILE_FLAGS -Dfile67)

set_source_files_properties(file68.cpp PROPERTIES COMPILE_FLAGS -Dfile68)

set_source_files_properties(file69.cpp PROPERTIES COMPILE_FLAGS -Dfile69)

set_source_files_properties(file70.cpp PROPERTIES COMPILE_FLAGS -Dfile70)

set_source_files_properties(file71.cpp PROPERTIES COMPILE_FLAGS -Dfile71)

set_source_files_properties(file72.cpp PROPERTIES COMPILE_FLAGS -Dfile72)

set_source_files_properties(file73.cpp PROPERTIES COMPILE_FLAGS -Dfile73)

set_source_files_properties(file74.cpp PROPERTIES COMPILE_FLAGS -Dfile74)

set_source_files_properties(file75.cpp PROPERTIES COMPILE_FLAGS -Dfile75)

set_source_files_properties(file76.cpp PROPERTIES COMPILE_FLAGS -Dfile76)

set_source_files_properties(file77.cpp PROPERTIES COMPILE_FLAGS -Dfile77)

set_source_files_properties(file78.cpp PROPERTIES COMPILE_FLAGS -Dfile78)

set_source_files_properties(file79.cpp PROPERTIES COMPILE_FLAGS -Dfile79)

set_source_files_properties(file80.cpp PROPERTIES COMPILE_FLAGS -Dfile80)

set_source_files_properties(file81.cpp PROPERTIES COMPILE_FLAGS -Dfile81)

set_source_files_properties(file82.cpp PROPERTIES COMPILE_FLAGS -Dfile82)

set_source_files_properties(file83.cpp PROPERTIES COMPILE_FLAGS -Dfile83)

set_source_files_properties(file84.cpp PROPERTIES COMPILE_FLAGS -Dfile84)

set_source_files_properties(file85.cpp PROPERTIES COMPILE_FLAGS -Dfile85)

set_source_files_properties(file86.cpp PROPERTIES COMPILE_FLAGS -Dfile86)

set_source_files_properties(file87.cpp PROPERTIES COMPILE_FLAGS -Dfile87)

set_source_files_properties(file88.cpp PROPERTIES COMPILE_FLAGS -Dfile88)

set_source_files_properties(file89.cpp PROPERTIES COMPILE_FLAGS -Dfile89)

set_source_files_properties(file90.cpp PROPERTIES COMPILE_FLAGS -Dfile90)

set_source_files_properties(file91.cpp PROPERTIES COMPILE_FLAGS -Dfile91)

set_source_files_properties(file92.cpp PROPERTIES COMPILE_FLAGS -Dfile92)

set_source_files_properties(file93.cpp PROPERTIES COMPILE_FLAGS -Dfile93)
