cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir94 SHARED ${SRC_FILES} )
set_source_files_properties(file95.cpp PROPERTIES COMPILE_FLAGS -Dfile95)

set_source_files_properties(file96.cpp PROPERTIES COMPILE_FLAGS -Dfile96)

set_source_files_properties(file97.cpp PROPERTIES COMPILE_FLAGS -Dfile97)

set_source_files_properties(file98.cpp PROPERTIES COMPILE_FLAGS -Dfile98)

set_source_files_properties(file99.cpp PROPERTIES COMPILE_FLAGS -Dfile99)

set_source_files_properties(file100.cpp PROPERTIES COMPILE_FLAGS -Dfile100)

set_source_files_properties(file101.cpp PROPERTIES COMPILE_FLAGS -Dfile101)

set_source_files_properties(file102.cpp PROPERTIES COMPILE_FLAGS -Dfile102)

set_source_files_properties(file103.cpp PROPERTIES COMPILE_FLAGS -Dfile103)

set_source_files_properties(file104.cpp PROPERTIES COMPILE_FLAGS -Dfile104)

set_source_files_properties(file105.cpp PROPERTIES COMPILE_FLAGS -Dfile105)

set_source_files_properties(file106.cpp PROPERTIES COMPILE_FLAGS -Dfile106)

set_source_files_properties(file107.cpp PROPERTIES COMPILE_FLAGS -Dfile107)

set_source_files_properties(file108.cpp PROPERTIES COMPILE_FLAGS -Dfile108)

set_source_files_properties(file109.cpp PROPERTIES COMPILE_FLAGS -Dfile109)

set_source_files_properties(file110.cpp PROPERTIES COMPILE_FLAGS -Dfile110)

set_source_files_properties(file111.cpp PROPERTIES COMPILE_FLAGS -Dfile111)

set_source_files_properties(file112.cpp PROPERTIES COMPILE_FLAGS -Dfile112)

set_source_files_properties(file113.cpp PROPERTIES COMPILE_FLAGS -Dfile113)

set_source_files_properties(file114.cpp PROPERTIES COMPILE_FLAGS -Dfile114)

set_source_files_properties(file115.cpp PROPERTIES COMPILE_FLAGS -Dfile115)

set_source_files_properties(file116.cpp PROPERTIES COMPILE_FLAGS -Dfile116)

set_source_files_properties(file117.cpp PROPERTIES COMPILE_FLAGS -Dfile117)

set_source_files_properties(file118.cpp PROPERTIES COMPILE_FLAGS -Dfile118)

set_source_files_properties(file119.cpp PROPERTIES COMPILE_FLAGS -Dfile119)

set_source_files_properties(file120.cpp PROPERTIES COMPILE_FLAGS -Dfile120)

set_source_files_properties(file121.cpp PROPERTIES COMPILE_FLAGS -Dfile121)

set_source_files_properties(file122.cpp PROPERTIES COMPILE_FLAGS -Dfile122)

set_source_files_properties(file123.cpp PROPERTIES COMPILE_FLAGS -Dfile123)

set_source_files_properties(file124.cpp PROPERTIES COMPILE_FLAGS -Dfile124)

set_source_files_properties(file125.cpp PROPERTIES COMPILE_FLAGS -Dfile125)

set_source_files_properties(file126.cpp PROPERTIES COMPILE_FLAGS -Dfile126)

set_source_files_properties(file127.cpp PROPERTIES COMPILE_FLAGS -Dfile127)

set_source_files_properties(file128.cpp PROPERTIES COMPILE_FLAGS -Dfile128)

set_source_files_properties(file129.cpp PROPERTIES COMPILE_FLAGS -Dfile129)

set_source_files_properties(file130.cpp PROPERTIES COMPILE_FLAGS -Dfile130)

set_source_files_properties(file131.cpp PROPERTIES COMPILE_FLAGS -Dfile131)

set_source_files_properties(file132.cpp PROPERTIES COMPILE_FLAGS -Dfile132)

set_source_files_properties(file133.cpp PROPERTIES COMPILE_FLAGS -Dfile133)

set_source_files_properties(file134.cpp PROPERTIES COMPILE_FLAGS -Dfile134)

set_source_files_properties(file135.cpp PROPERTIES COMPILE_FLAGS -Dfile135)

set_source_files_properties(file136.cpp PROPERTIES COMPILE_FLAGS -Dfile136)

set_source_files_properties(file137.cpp PROPERTIES COMPILE_FLAGS -Dfile137)

set_source_files_properties(file138.cpp PROPERTIES COMPILE_FLAGS -Dfile138)

set_source_files_properties(file139.cpp PROPERTIES COMPILE_FLAGS -Dfile139)

set_source_files_properties(file140.cpp PROPERTIES COMPILE_FLAGS -Dfile140)

set_source_files_properties(file141.cpp PROPERTIES COMPILE_FLAGS -Dfile141)

set_source_files_properties(file142.cpp PROPERTIES COMPILE_FLAGS -Dfile142)

set_source_files_properties(file143.cpp PROPERTIES COMPILE_FLAGS -Dfile143)

set_source_files_properties(file144.cpp PROPERTIES COMPILE_FLAGS -Dfile144)

set_source_files_properties(file145.cpp PROPERTIES COMPILE_FLAGS -Dfile145)

set_source_files_properties(file146.cpp PROPERTIES COMPILE_FLAGS -Dfile146)

set_source_files_properties(file147.cpp PROPERTIES COMPILE_FLAGS -Dfile147)

set_source_files_properties(file148.cpp PROPERTIES COMPILE_FLAGS -Dfile148)

set_source_files_properties(file149.cpp PROPERTIES COMPILE_FLAGS -Dfile149)

set_source_files_properties(file150.cpp PROPERTIES COMPILE_FLAGS -Dfile150)

set_source_files_properties(file151.cpp PROPERTIES COMPILE_FLAGS -Dfile151)

set_source_files_properties(file152.cpp PROPERTIES COMPILE_FLAGS -Dfile152)

set_source_files_properties(file153.cpp PROPERTIES COMPILE_FLAGS -Dfile153)

set_source_files_properties(file154.cpp PROPERTIES COMPILE_FLAGS -Dfile154)

set_source_files_properties(file155.cpp PROPERTIES COMPILE_FLAGS -Dfile155)

set_source_files_properties(file156.cpp PROPERTIES COMPILE_FLAGS -Dfile156)

set_source_files_properties(file157.cpp PROPERTIES COMPILE_FLAGS -Dfile157)

set_source_files_properties(file158.cpp PROPERTIES COMPILE_FLAGS -Dfile158)

set_source_files_properties(file159.cpp PROPERTIES COMPILE_FLAGS -Dfile159)

set_source_files_properties(file160.cpp PROPERTIES COMPILE_FLAGS -Dfile160)

set_source_files_properties(file161.cpp PROPERTIES COMPILE_FLAGS -Dfile161)

set_source_files_properties(file162.cpp PROPERTIES COMPILE_FLAGS -Dfile162)

set_source_files_properties(file163.cpp PROPERTIES COMPILE_FLAGS -Dfile163)

set_source_files_properties(file164.cpp PROPERTIES COMPILE_FLAGS -Dfile164)

set_source_files_properties(file165.cpp PROPERTIES COMPILE_FLAGS -Dfile165)

set_source_files_properties(file166.cpp PROPERTIES COMPILE_FLAGS -Dfile166)

set_source_files_properties(file167.cpp PROPERTIES COMPILE_FLAGS -Dfile167)

set_source_files_properties(file168.cpp PROPERTIES COMPILE_FLAGS -Dfile168)

set_source_files_properties(file169.cpp PROPERTIES COMPILE_FLAGS -Dfile169)

set_source_files_properties(file170.cpp PROPERTIES COMPILE_FLAGS -Dfile170)

set_source_files_properties(file171.cpp PROPERTIES COMPILE_FLAGS -Dfile171)

set_source_files_properties(file172.cpp PROPERTIES COMPILE_FLAGS -Dfile172)

set_source_files_properties(file173.cpp PROPERTIES COMPILE_FLAGS -Dfile173)

set_source_files_properties(file174.cpp PROPERTIES COMPILE_FLAGS -Dfile174)

set_source_files_properties(file175.cpp PROPERTIES COMPILE_FLAGS -Dfile175)

set_source_files_properties(file176.cpp PROPERTIES COMPILE_FLAGS -Dfile176)

set_source_files_properties(file177.cpp PROPERTIES COMPILE_FLAGS -Dfile177)

set_source_files_properties(file178.cpp PROPERTIES COMPILE_FLAGS -Dfile178)

set_source_files_properties(file179.cpp PROPERTIES COMPILE_FLAGS -Dfile179)

set_source_files_properties(file180.cpp PROPERTIES COMPILE_FLAGS -Dfile180)

set_source_files_properties(file181.cpp PROPERTIES COMPILE_FLAGS -Dfile181)

set_source_files_properties(file182.cpp PROPERTIES COMPILE_FLAGS -Dfile182)

set_source_files_properties(file183.cpp PROPERTIES COMPILE_FLAGS -Dfile183)

set_source_files_properties(file184.cpp PROPERTIES COMPILE_FLAGS -Dfile184)

set_source_files_properties(file185.cpp PROPERTIES COMPILE_FLAGS -Dfile185)

set_source_files_properties(file186.cpp PROPERTIES COMPILE_FLAGS -Dfile186)

set_source_files_properties(file187.cpp PROPERTIES COMPILE_FLAGS -Dfile187)

set_source_files_properties(file188.cpp PROPERTIES COMPILE_FLAGS -Dfile188)

set_source_files_properties(file189.cpp PROPERTIES COMPILE_FLAGS -Dfile189)

set_source_files_properties(file190.cpp PROPERTIES COMPILE_FLAGS -Dfile190)

set_source_files_properties(file191.cpp PROPERTIES COMPILE_FLAGS -Dfile191)

set_source_files_properties(file192.cpp PROPERTIES COMPILE_FLAGS -Dfile192)

set_source_files_properties(file193.cpp PROPERTIES COMPILE_FLAGS -Dfile193)

set_source_files_properties(file194.cpp PROPERTIES COMPILE_FLAGS -Dfile194)

set_source_files_properties(file195.cpp PROPERTIES COMPILE_FLAGS -Dfile195)

set_source_files_properties(file196.cpp PROPERTIES COMPILE_FLAGS -Dfile196)

set_source_files_properties(file197.cpp PROPERTIES COMPILE_FLAGS -Dfile197)

set_source_files_properties(file198.cpp PROPERTIES COMPILE_FLAGS -Dfile198)

set_source_files_properties(file199.cpp PROPERTIES COMPILE_FLAGS -Dfile199)

set_source_files_properties(file200.cpp PROPERTIES COMPILE_FLAGS -Dfile200)

set_source_files_properties(file201.cpp PROPERTIES COMPILE_FLAGS -Dfile201)

set_source_files_properties(file202.cpp PROPERTIES COMPILE_FLAGS -Dfile202)

set_source_files_properties(file203.cpp PROPERTIES COMPILE_FLAGS -Dfile203)

set_source_files_properties(file204.cpp PROPERTIES COMPILE_FLAGS -Dfile204)

set_source_files_properties(file205.cpp PROPERTIES COMPILE_FLAGS -Dfile205)

set_source_files_properties(file206.cpp PROPERTIES COMPILE_FLAGS -Dfile206)

set_source_files_properties(file207.cpp PROPERTIES COMPILE_FLAGS -Dfile207)

set_source_files_properties(file208.cpp PROPERTIES COMPILE_FLAGS -Dfile208)

set_source_files_properties(file209.cpp PROPERTIES COMPILE_FLAGS -Dfile209)

set_source_files_properties(file210.cpp PROPERTIES COMPILE_FLAGS -Dfile210)

set_source_files_properties(file211.cpp PROPERTIES COMPILE_FLAGS -Dfile211)

set_source_files_properties(file212.cpp PROPERTIES COMPILE_FLAGS -Dfile212)

set_source_files_properties(file213.cpp PROPERTIES COMPILE_FLAGS -Dfile213)

set_source_files_properties(file214.cpp PROPERTIES COMPILE_FLAGS -Dfile214)

set_source_files_properties(file215.cpp PROPERTIES COMPILE_FLAGS -Dfile215)

set_source_files_properties(file216.cpp PROPERTIES COMPILE_FLAGS -Dfile216)
