cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir35536 SHARED ${SRC_FILES} )
add_subdirectory(dir35537)
add_subdirectory(dir35719)
add_subdirectory(dir35721)
add_subdirectory(dir35859)
add_subdirectory(dir38504)
add_subdirectory(dir38541)
add_subdirectory(dir38612)
add_subdirectory(dir38680)
add_subdirectory(dir38742)
set_source_files_properties(file38915.cpp PROPERTIES COMPILE_FLAGS -Dfile38915)

set_source_files_properties(file38916.cpp PROPERTIES COMPILE_FLAGS -Dfile38916)

set_source_files_properties(file38917.cpp PROPERTIES COMPILE_FLAGS -Dfile38917)

set_source_files_properties(file38918.cpp PROPERTIES COMPILE_FLAGS -Dfile38918)

set_source_files_properties(file38919.cpp PROPERTIES COMPILE_FLAGS -Dfile38919)

set_source_files_properties(file38920.cpp PROPERTIES COMPILE_FLAGS -Dfile38920)

set_source_files_properties(file38921.cpp PROPERTIES COMPILE_FLAGS -Dfile38921)

set_source_files_properties(file38922.cpp PROPERTIES COMPILE_FLAGS -Dfile38922)

set_source_files_properties(file38923.cpp PROPERTIES COMPILE_FLAGS -Dfile38923)

set_source_files_properties(file38924.cpp PROPERTIES COMPILE_FLAGS -Dfile38924)

set_source_files_properties(file38925.cpp PROPERTIES COMPILE_FLAGS -Dfile38925)

set_source_files_properties(file38926.cpp PROPERTIES COMPILE_FLAGS -Dfile38926)

set_source_files_properties(file38927.cpp PROPERTIES COMPILE_FLAGS -Dfile38927)

set_source_files_properties(file38928.cpp PROPERTIES COMPILE_FLAGS -Dfile38928)

set_source_files_properties(file38929.cpp PROPERTIES COMPILE_FLAGS -Dfile38929)

set_source_files_properties(file38930.cpp PROPERTIES COMPILE_FLAGS -Dfile38930)

set_source_files_properties(file38931.cpp PROPERTIES COMPILE_FLAGS -Dfile38931)

set_source_files_properties(file38932.cpp PROPERTIES COMPILE_FLAGS -Dfile38932)

set_source_files_properties(file38933.cpp PROPERTIES COMPILE_FLAGS -Dfile38933)

set_source_files_properties(file38934.cpp PROPERTIES COMPILE_FLAGS -Dfile38934)

set_source_files_properties(file38935.cpp PROPERTIES COMPILE_FLAGS -Dfile38935)

set_source_files_properties(file38936.cpp PROPERTIES COMPILE_FLAGS -Dfile38936)

set_source_files_properties(file38937.cpp PROPERTIES COMPILE_FLAGS -Dfile38937)

set_source_files_properties(file38938.cpp PROPERTIES COMPILE_FLAGS -Dfile38938)

set_source_files_properties(file38939.cpp PROPERTIES COMPILE_FLAGS -Dfile38939)

set_source_files_properties(file38940.cpp PROPERTIES COMPILE_FLAGS -Dfile38940)

set_source_files_properties(file38941.cpp PROPERTIES COMPILE_FLAGS -Dfile38941)

set_source_files_properties(file38942.cpp PROPERTIES COMPILE_FLAGS -Dfile38942)

set_source_files_properties(file38943.cpp PROPERTIES COMPILE_FLAGS -Dfile38943)

set_source_files_properties(file38944.cpp PROPERTIES COMPILE_FLAGS -Dfile38944)

set_source_files_properties(file38945.cpp PROPERTIES COMPILE_FLAGS -Dfile38945)

set_source_files_properties(file38946.cpp PROPERTIES COMPILE_FLAGS -Dfile38946)

set_source_files_properties(file38947.cpp PROPERTIES COMPILE_FLAGS -Dfile38947)

set_source_files_properties(file38948.cpp PROPERTIES COMPILE_FLAGS -Dfile38948)

set_source_files_properties(file38949.cpp PROPERTIES COMPILE_FLAGS -Dfile38949)

set_source_files_properties(file38950.cpp PROPERTIES COMPILE_FLAGS -Dfile38950)

set_source_files_properties(file38951.cpp PROPERTIES COMPILE_FLAGS -Dfile38951)

set_source_files_properties(file38952.cpp PROPERTIES COMPILE_FLAGS -Dfile38952)

set_source_files_properties(file38953.cpp PROPERTIES COMPILE_FLAGS -Dfile38953)

set_source_files_properties(file38954.cpp PROPERTIES COMPILE_FLAGS -Dfile38954)

set_source_files_properties(file38955.cpp PROPERTIES COMPILE_FLAGS -Dfile38955)

set_source_files_properties(file38956.cpp PROPERTIES COMPILE_FLAGS -Dfile38956)

set_source_files_properties(file38957.cpp PROPERTIES COMPILE_FLAGS -Dfile38957)

set_source_files_properties(file38958.cpp PROPERTIES COMPILE_FLAGS -Dfile38958)

set_source_files_properties(file38959.cpp PROPERTIES COMPILE_FLAGS -Dfile38959)

set_source_files_properties(file38960.cpp PROPERTIES COMPILE_FLAGS -Dfile38960)

set_source_files_properties(file38961.cpp PROPERTIES COMPILE_FLAGS -Dfile38961)

set_source_files_properties(file38962.cpp PROPERTIES COMPILE_FLAGS -Dfile38962)

set_source_files_properties(file38963.cpp PROPERTIES COMPILE_FLAGS -Dfile38963)

set_source_files_properties(file38964.cpp PROPERTIES COMPILE_FLAGS -Dfile38964)

set_source_files_properties(file38965.cpp PROPERTIES COMPILE_FLAGS -Dfile38965)

set_source_files_properties(file38966.cpp PROPERTIES COMPILE_FLAGS -Dfile38966)

set_source_files_properties(file38967.cpp PROPERTIES COMPILE_FLAGS -Dfile38967)

set_source_files_properties(file38968.cpp PROPERTIES COMPILE_FLAGS -Dfile38968)
